# raytracer

./: .gitignore  Makefile  dune-project  image.ppm  raytracer.opam
_build/: .db  .digest-db  log
_build/default/: raytracer.dune-package
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: raytracer.cma  raytracer.cmxa  raytracer.cmxs  raytracer.ml-gen
_build/default/lib/.merlin-conf/: lib-raytracer
_build/default/lib/.raytracer.objs/: raytracer__Util.impl.all-deps  util.ml.d  vec3.ml.d
_build/default/lib/.raytracer.objs/byte/: raytracer.cmi  raytracer.cmo  raytracer.cmt  raytracer__Util.cmi  raytracer__Util.cmo  raytracer__Util.cmt  raytracer__Vec3.cmi  raytracer__Vec3.cmo  raytracer__Vec3.cmt
_build/default/lib/.raytracer.objs/native/: raytracer.cmx  raytracer__Util.cmx  raytracer__Vec3.cmx
_build/default/test/.merlin-conf/: exe-raytracer
_build/default/test/.raytracer.eobjs/byte/: dune__exe__Raytracer.cmi  dune__exe__Raytracer.cmti
_build/default/test/.raytracer.eobjs/native/: dune__exe__Raytracer.cmx
lib/: camera.ml  dune  material.ml  ray.ml  raytracer.ml  scene.ml  sphere.ml  util.ml  vec3.ml
test/: dune
