(lang dune 3.0)

(name raytracer)

(generate_opam_files true)

(source
 (github lukerhoads/raytracer))

(authors "Luke Rhoads")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name raytracer)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
